[package]
name = "cigar-lodhi-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
pa-types = "1.0.0"
pyo3 = { version = "0.21", features = ["extension-module"] }

[lib]
name = "cigar_lodhi_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cigar-lodhi-rs"
path = "bin/main.rs"
